--- a/index.html
+++ b/index.html
@@ -1,2 +1,22 @@
 <!DOCTYPE html>
-<html lang="en-US"></html>
+<html lang="en-US">
+  <head>
+    <title>Programming Language Selector</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css" />
+    <script src="js/scripts.js"></script>
+  </head>
+  <body>
+    <h1>Which Programming Language Is Right For You?</h1>
+    <h3>Fill out this brief questionnaire to find out!</h3>
+    <p>What position are you going for with this knowledge?</p>
+    <form id="questionSet">
+      <select id="userInput">
+        <option>Game Development</option>
+        <option>Web and App Development</option>
+        <option>Data Science</option>
+        <option>Software Engineer</option>
+        <option>Learning For Fun</option>
+      </select>
+    </form>
+  </body>
+</html>
