WIP: rereading a few sections to see how to structure next form

--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
         <option>Software Engineer</option>
         <option>Learning For Fun</option>
       </select>
+      <p>What operating system do you use?</p>
+      <label>
+        <input type="radio" name="OS" value="Windows" />
+        Windows
+      </label>
+      <label>
+        <input type="radio" name="OS" value="MacOS" />
+        MacOS
+      </label>
+      <label>
+        <input type="radio" name="OS" value="Linux" />
+        Linux
+      </label>
     </form>
   </body>
 </html>
