add radio for os selection

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Which Programming Language Is Right For You?</h1>
     <h3>Fill out this brief questionnaire to find out!</h3>
-    <p>What position are you going for with this knowledge?</p>
+    <p>1. What position are you going for with this knowledge?</p>
     <form id="questionSet">
       <select id="userInput">
         <option>Game Development</option>
@@ -17,7 +17,8 @@
         <option>Software Engineer</option>
         <option>Learning For Fun</option>
       </select>
-      <p>What operating system do you use?</p>
+      <br />
+      <p>2. What operating system do you use?</p>
       <label>
         <input type="radio" name="OS" value="Windows" />
         Windows
@@ -30,6 +31,7 @@
         <input type="radio" name="OS" value="Linux" />
         Linux
       </label>
+      <br />
     </form>
   </body>
 </html>
