add preferred workplace

--- a/index.html
+++ b/index.html
@@ -48,6 +48,19 @@
         <option>I don't have one</option>
       </select>
       <br />
+      <p>5. Where would you rather work?</p>
+      <label>
+        <input type="radio" name="workplace" value="Google" />
+        Google
+      </label>
+      <label>
+        <input type="radio" name="workplace" value="Apple" />
+        Apple
+      </label>
+      <label>
+        <input type="radio" name="workplace" value="Microsoft" />
+        Microsoft
+      </label>
     </form>
   </body>
 </html>
