--- a/index.html
+++ b/index.html
@@ -62,5 +62,22 @@
         Microsoft
       </label>
     </form>
+    <div id="outcome" class="hidden">
+      <h3>
+        Here is what we think the best language for you would be based off of
+        your answers!
+      </h3>
+      <p>
+        Given what you told us, we think that ___ is going to be the best
+        language for you to learn to achieve the goals you have set!
+      </p>
+    </div>
+    <div id="invalid" class="hidden">
+      <h3>Inconclusive!</h3>
+      <p>
+        We were unable to determine what language would be best for you to
+        learn. Make sure you answered all of the questions!
+      </p>
+    </div>
   </body>
 </html>
