add js specifications for calling form results

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         Linux
       </label>
       <br />
-      <p>4. What is your favorite DnD Class</p>
+      <p>4. What is your favorite DnD Class?</p>
       <select id="userClass">
         <option>Barbarian</option>
         <option>Fighter</option>
