--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         <input type="radio" name="workplace" value="Microsoft" />
         Microsoft
       </label>
+      <button type="submit">Find Out!</button>
     </form>
     <div id="outcome" class="hidden">
       <h3>
@@ -68,8 +69,16 @@
         your answers!
       </h3>
       <p>
+        Alright <span id="name1a">_</span>, first let's make sure we got this
+        right. Your chosen position was <span id="field1a">_</span>. The
+        Operating System you use is <span id="os1a">_</span>. Your favorite DnD
+        class is <span id="class1a">_</span>? Nice choice. Then finally, the
+        company you would rather work for out of the selection is
+        <span id="workplace1a">_</span>. Good! Now on to your results.
+      </p>
+      <p>
         Given what you told us, we think that ___ is going to be the best
-        language for you to learn to achieve the goals you have set!
+        language for you to learn and achieve the goals you have set!
       </p>
     </div>
     <div id="invalid" class="hidden">
