add more descriptions for the different languages

--- a/index.html
+++ b/index.html
@@ -77,8 +77,11 @@
         <span id="workplace1a">_</span>. Good! Now on to your results.
       </p>
       <p>
-        Given what you told us, we think that ___ is going to be the best
-        language for you to learn and achieve the goals you have set!
+        Given what you told us, we think that C++ is going to be the best
+        language for you to learn and achieve the goals you have set! C++ is
+        primarily used in Game Development. It is the most widely used language
+        in that regard. The language is also used for GUI based applications,
+        operating systems, and many other cases.
       </p>
     </div>
 
@@ -97,7 +100,10 @@
       </p>
       <p>
         Given what you told us, we think that C# is going to be the best
-        language for you to learn and achieve the goals you have set!
+        language for you to learn and achieve the goals you have set! C# is used
+        for a wide range of things. Such as developing web applications and
+        services, desktop applications, and it is also used to make games in the
+        Unity engine.
       </p>
     </div>
 
