--- a/index.html
+++ b/index.html
@@ -107,6 +107,27 @@
       </p>
     </div>
 
+    <div id="outcome3" class="hidden">
+      <h3>
+        Here is what we think the best language for you would be based off of
+        your answers!
+      </h3>
+      <p>
+        Alright <span id="name1a">_</span>, first let's make sure we got this
+        right. Your chosen position was <span id="field1a">_</span>. The
+        Operating System you use is <span id="os1a">_</span>. Your favorite DnD
+        class is <span id="class1a">_</span>? Nice choice. Then finally, the
+        company you would rather work for out of the selection is
+        <span id="workplace1a">_</span>. Good! Now on to your results.
+      </p>
+      <p>
+        Given what you told us, we think that JavaScript is going to be the best
+        language for you to learn and achieve the goals you have set! JavaScript
+        is mainly used for adding more interactive and animated behavior to
+        websites, building servers, creating apps, and even game development.
+      </p>
+    </div>
+
     <div id="invalid" class="hidden">
       <h3>Inconclusive!</h3>
       <p>
