WIP add branching for results

--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
         <input type="radio" name="workplace" value="Microsoft" />
         Microsoft
       </label>
+      <label>
+        <input type="radio" name="workplace" value="Bungie" />
+        Bungie
+      </label>
       <button type="submit">Find Out!</button>
     </form>
     <div id="outcome1" class="hidden">
