--- a/index.html
+++ b/index.html
@@ -65,31 +65,12 @@
         <input type="radio" name="workplace" value="Bungie" />
         Bungie
       </label>
+      <br />
+      <br />
       <button type="submit">Find Out!</button>
     </form>
-    <div id="outcome1" class="hidden">
-      <h3>
-        Here is what we think the best language for you would be based off of
-        your answers!
-      </h3>
-      <p>
-        Alright <span id="name1a">_</span>, first let's make sure we got this
-        right. Your chosen position was <span id="field1a">_</span>. The
-        Operating System you use is <span id="os1a">_</span>. Your favorite DnD
-        class is <span id="class1a">_</span>? Nice choice. Then finally, the
-        company you would rather work for out of the selection is
-        <span id="workplace1a">_</span>. Good! Now on to your results.
-      </p>
-      <p>
-        Given what you told us, we think that C++ is going to be the best
-        language for you to learn and achieve the goals you have set! C++ is
-        primarily used in Game Development. It is the most widely used language
-        in that regard. The language is also used for GUI based applications,
-        operating systems, and many other cases.
-      </p>
-    </div>
 
-    <div id="outcome2" class="hidden">
+    <div id="outcome" class="hidden">
       <h3>
         Here is what we think the best language for you would be based off of
         your answers!
@@ -103,32 +84,9 @@
         <span id="workplace1a">_</span>. Good! Now on to your results.
       </p>
       <p>
-        Given what you told us, we think that C# is going to be the best
-        language for you to learn and achieve the goals you have set! C# is used
-        for a wide range of things. Such as developing web applications and
-        services, desktop applications, and it is also used to make games in the
-        Unity engine.
-      </p>
-    </div>
-
-    <div id="outcome3" class="hidden">
-      <h3>
-        Here is what we think the best language for you would be based off of
-        your answers!
-      </h3>
-      <p>
-        Alright <span id="name1a">_</span>, first let's make sure we got this
-        right. Your chosen position was <span id="field1a">_</span>. The
-        Operating System you use is <span id="os1a">_</span>. Your favorite DnD
-        class is <span id="class1a">_</span>? Nice choice. Then finally, the
-        company you would rather work for out of the selection is
-        <span id="workplace1a">_</span>. Good! Now on to your results.
-      </p>
-      <p>
-        Given what you told us, we think that JavaScript is going to be the best
-        language for you to learn and achieve the goals you have set! JavaScript
-        is mainly used for adding more interactive and animated behavior to
-        websites, building servers, creating apps, and even game development.
+        Given what you told us, we think that <span id="language">_</span> is
+        going to be the best language for you to learn and achieve the goals you
+        have set! <span id="languageDescription">_</span>
       </p>
     </div>
 
